Closed
Bug 1690430
Opened 4 years ago
Closed 4 years ago
AsyncPanZoomController::ApplyAsyncTestAttributes does not clamp scroll
Categories
(Core :: Panning and Zooming, defect, P3)
Tracking
()
VERIFIED
FIXED
88 Branch
People
(Reporter: sawyerbergeron, Assigned: botond)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:87.0) Gecko/20100101 Firefox/87.0
Steps to reproduce:
- Write test that applies a negative scroll to a scrollable region
Actual results:
Content freely scrolls past bounds of track
Expected results:
Content should be clamped, with any end-of-track effect (such as overscroll) applied
Reporter | ||
Updated•4 years ago
|
Component: Untriaged → Panning and Zooming
Product: Firefox → Core
Hardware: Unspecified → Desktop
Reporter | ||
Comment 1•4 years ago
|
||
Updated•4 years ago
|
Assignee: nobody → sawyerbergeron
Assignee | ||
Updated•4 years ago
|
Severity: -- → S3
Priority: -- → P3
Assignee | ||
Updated•4 years ago
|
Blocks: overscroll
Assignee | ||
Comment 2•4 years ago
•
|
||
I posted a patch in a dependent bug 1695385 to fix the tests which this change would regress (there were only three). With that in place, I expect this change should not require any further test changes.
Assignee | ||
Comment 3•4 years ago
|
||
Stealing as this is blocking bug 1697681 (via bug 1697712 and bug 1686146).
Assignee: sawyerbergeron → botond
Updated•4 years ago
|
Attachment #9200799 -
Attachment description: Bug 1690430 - Clamp scroll during ApplyAsyncTestAttributes → Bug 1690430 - Clamp scroll offset during ApplyAsyncTestAttributes. r=tnikkel
Pushed by bballo@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/91085d3da293
Clamp scroll offset during ApplyAsyncTestAttributes. r=tnikkel
Comment 5•4 years ago
|
||
bugherder |
Status: UNCONFIRMED → RESOLVED
Closed: 4 years ago
status-firefox88:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 88 Branch
Comment 6•4 years ago
|
||
Verified fixed in beta 89.0b2 (20210420191345) and Nightly 90.0a1 (2021-04-20) (20210420213949) on MacOS 11.2.3 and M1 MacOS Big Sur 11.0.1.
You need to log in
before you can comment on or make changes to this bug.
Description
•