Bug 1690430 - Clamp scroll offset during ApplyAsyncTestAttributes. r=tnikkel

Differential Revision: https://phabricator.services.mozilla.com/D103850